tests/reordering/reordering.exp
Error ------------------------------------------------------------------------------------------------------- err.js:3:1

Dependency cycle detected

      v-------------
   3| function f() {
   4|   g()
   5| }
      ^


Error ------------------------------------------------------------------------------------------------------- err.js:6:1

Dependency cycle detected

      v-------------
   6| function g() {
   7|   f()
   8| }
      ^



Found 2 errors
